# pdf_attachments

./: .gitignore  AGENTS.md  README.md  pdf_attachments.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_add.py
