[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-attachments"
version = "0.1.0"
description = "List, extract, and add PDF attachments from the command line."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pypdf",
    "typer>=0.24.0",
]

[project.scripts]
pdf-attachments = "pdf_attachments:main"

[tool.hatch.build.targets.wheel]
packages = ["pdf_attachments.py"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["pdf_attachments"]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
